--- a/index.html
+++ b/index.html
@@ -1,44 +1,46 @@
 <!doctype html>
 <html lang="tr">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Sponge WebAR</title>
-  <style>
-    body { margin:0; overflow:hidden; font-family: system-ui; }
-    #hint {
-      position: fixed;
-      bottom: 16px;
-      left: 16px;
-      right: 16px;
-      background: rgba(0,0,0,.6);
-      color: #fff;
-      padding: 12px 14px;
-      border-radius: 14px;
-      text-align: center;
-      z-index: 10;
-    }
-    #iosBtn {
-      position: fixed;
-      top: 16px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: #ffd800;
-      color: #000;
-      padding: 10px 16px;
-      border-radius: 20px;
-      font-weight: 600;
-      text-decoration: none;
-      display: none;
-      z-index: 20;
-    }
-  </style>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Sponge WebAR</title>
+
+<style>
+body{margin:0;overflow:hidden;font-family:system-ui;background:#000}
+#hint{
+  position:fixed;bottom:16px;left:16px;right:16px;
+  background:rgba(0,0,0,.65);color:#fff;
+  padding:12px 14px;border-radius:14px;
+  text-align:center;z-index:10
+}
+#iosBtn{
+  position:fixed;top:16px;left:50%;
+  transform:translateX(-50%);
+  background:#ffd800;color:#000;
+  padding:12px 18px;border-radius:22px;
+  font-weight:600;text-decoration:none;
+  display:none;z-index:20
+}
+</style>
 </head>
 <body>
 
-<a id="iosBtn" rel="ar" href="spongebob.usdz">iPhone için AR aç</a>
+<a id="iosBtn" rel="ar" href="spongebob.usdz">Sünger Bob’u Odaya Yerleştir</a>
 <div id="hint">Yere tut → halkayı bekle → dokun ve Sünger Bob’u bırak.</div>
 
-<script type="module" src="main.js"></script>
+<script>
+const isIOS = /iPad|iPhone|iPod/.test(navigator.userAgent);
+
+if(isIOS){
+  document.getElementById("iosBtn").style.display="block";
+  document.getElementById("hint").innerHTML="Butona dokun → kamerayı aç → odaya yerleştir.";
+}else{
+  const s=document.createElement("script");
+  s.type="module";
+  s.src="main.js";
+  document.body.appendChild(s);
+}
+</script>
+
 </body>
 </html>
