--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body{margin:0;overflow:hidden;font-family:system-ui;background:#000}
 </head>
 <body>
 
-<a id="iosBtn" rel="ar" href="spongebob.usdz">Sünger Bob’u Odaya Yerleştir</a>
+<a id="iosBtn" rel="ar" href="spongebob.glb">Sünger Bob’u Odaya Yerleştir</a>
 <div id="hint">Yere tut → halkayı bekle → dokun ve Sünger Bob’u bırak.</div>
 
 <script>
