--- a/index.html
+++ b/index.html
@@ -3,44 +3,40 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Sponge WebAR</title>
+<title>Sünger Bob AR</title>
 
 <style>
-body{margin:0;overflow:hidden;font-family:system-ui;background:#000}
-#hint{
-  position:fixed;bottom:16px;left:16px;right:16px;
-  background:rgba(0,0,0,.65);color:#fff;
-  padding:12px 14px;border-radius:14px;
-  text-align:center;z-index:10
+body{
+  margin:0;
+  height:100svh;
+  background:linear-gradient(180deg,#0a0a0a,#111);
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  font-family:-apple-system,system-ui;
+  color:white;
 }
-#iosBtn{
-  position:fixed;top:16px;left:50%;
-  transform:translateX(-50%);
-  background:#ffd800;color:#000;
-  padding:12px 18px;border-radius:22px;
-  font-weight:600;text-decoration:none;
-  display:none;z-index:20
+#arBtn{
+  background:#ffd800;
+  color:#000;
+  padding:18px 28px;
+  border-radius:32px;
+  font-size:18px;
+  font-weight:700;
+  border:none;
+}
+#hint{
+  margin-top:14px;
+  opacity:.7;
+  font-size:13px;
 }
 </style>
 </head>
 <body>
 
-<a id="iosBtn" rel="ar" href="spongebob.glb">Sünger Bob’u Odaya Yerleştir</a>
-<div id="hint">Yere tut → halkayı bekle → dokun ve Sünger Bob’u bırak.</div>
-
-<script>
-const isIOS = /iPad|iPhone|iPod/.test(navigator.userAgent);
-
-if(isIOS){
-  document.getElementById("iosBtn").style.display="block";
-  document.getElementById("hint").innerHTML="Butona dokun → kamerayı aç → odaya yerleştir.";
-}else{
-  const s=document.createElement("script");
-  s.type="module";
-  s.src="main.js";
-  document.body.appendChild(s);
-}
-</script>
+<a id="arBtn" rel="ar" href="spongebob.usdz">Sünger Bob’u Odaya Getir</a>
+<div id="hint">Butona dokun → kamera açılır → odaya yerleştir.</div>
 
 </body>
 </html>
