--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Şevvalime Kola</title>
+    <title>Şevvalimmms</title>
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.3.0/model-viewer.min.js"></script>
     <style>
         * {
@@ -137,11 +137,11 @@
     <div class="hearts-background" id="heartsContainer"></div>
     
     <div class="container">
-        <h1>Aşkım valla orda değilim diye alamadım kola sana </h1>
-        <p>Onun yerine sana dijitalini aldım :D <3 </p>
+        <h1>Aşkım seni soruyo bu sünger </h1>
+        <p>çok tatlısın falan diyo <3 </p>
 
         <model-viewer id="modelViewer"
-            src="ola.glb"
+            src="spongebob.glb"
             ar
             ar-modes="webxr scene-viewer quick-look"
             camera-controls
