--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <p>çok tatlısın falan diyo <3 </p>
 
         <model-viewer id="modelViewer"
-            src="spongebob.glb"
+            src="sponge.glb"
             ar
             ar-modes="webxr scene-viewer quick-look"
             camera-controls
